task2 update